--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "nodemailer": "^6.9.1"
+  },
+  "scripts": {
+    "start": "node src/app.js"
   }
 }
